--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ node_modules
 craftsam_Activity10.zip
 craftsam_Activity11.zip
 craftsam_Activity12.zip
+craftsam_Activity14.zip
+craftsam_Activity15.zip
+craftsam_Activity16.zip
